[gd_scene load_steps=16 format=3 uid="uid://c6ddyxopxsh6"]

[ext_resource type="Script" uid="uid://c7s2t2bplv8mh" path="res://scenes/overworld/overworld.gd" id="1_hxnvt"]
[ext_resource type="Script" uid="uid://df3n8atmwuse5" path="res://scripts/EditorMapLoader.gd" id="2_1dryu"]
[ext_resource type="Script" uid="uid://buoe21ml6g3ng" path="res://Navigation/MapManager.gd" id="3_kn0ur"]
[ext_resource type="TileSet" uid="uid://dqkukvvklhbpj" path="res://resources/GridDataTileSet.tres" id="4_fn02g"]
[ext_resource type="PackedScene" uid="uid://c14uenn8n47fb" path="res://Actors/Bus.tscn" id="5_n00ki"]
[ext_resource type="PackedScene" uid="uid://blipjagcsarec" path="res://Hub/Hub.tscn" id="6_vqjas"]
[ext_resource type="Resource" uid="uid://boqebad2qbjwp" path="res://data/Hubs/Oakmill.tres" id="7_fevyo"]
[ext_resource type="Resource" uid="uid://cvxcsjomg6ips" path="res://data/Hubs/Stonegrove.tres" id="8_vjxgl"]
[ext_resource type="Resource" uid="uid://r3yi2dpxhv6i" path="res://data/Hubs/Beaconsrest.tres" id="9_mu5r8"]
[ext_resource type="Resource" uid="uid://pekexvicnwbs" path="res://data/Hubs/Bluerock.tres" id="10_nurs3"]
[ext_resource type="PackedScene" uid="uid://cu7jy8xv5xj0b" path="res://UI/HubMenuUI.tscn" id="11_2efcw"]
[ext_resource type="PackedScene" uid="uid://bxn5d8qv2mw5k" path="res://UI/MarketUI.tscn" id="12_16lld"]
[ext_resource type="PackedScene" uid="uid://dr8k3m5y4qsax" path="res://UI/RecruitmentUI.tscn" id="13_0dr1u"]
[ext_resource type="PackedScene" uid="uid://cy5k8m3p4xn2r" path="res://Beasts/BeastDen.tscn" id="14_20j0v"]
[ext_resource type="Resource" uid="uid://dj48c3202x5v1" path="res://data/BeastDens/ScrapjackalDen.tres" id="15_ym87l"]

[node name="Overworld" type="Node2D"]
script = ExtResource("1_hxnvt")

[node name="MapScenery" type="Node2D" parent="."]
scale = Vector2(6, 6)

[node name="EditorMap" type="Node2D" parent="MapScenery"]
script = ExtResource("2_1dryu")
metadata/_edit_lock_ = true

[node name="MapManager" type="Node2D" parent="MapScenery"]
script = ExtResource("3_kn0ur")

[node name="GridData" type="TileMapLayer" parent="MapScenery/MapManager"]
tile_set = ExtResource("4_fn02g")

[node name="Bus" parent="." instance=ExtResource("5_n00ki")]
position = Vector2(35000, 36000)

[node name="PathLine" type="Line2D" parent="."]
z_index = 100
width = 5.0
default_color = Color(0.8784314, 0.011764706, 0, 1)

[node name="Oakmill" parent="." node_paths=PackedStringArray("hub_menu_ui", "market_ui", "recruitment_ui") instance=ExtResource("6_vqjas")]
position = Vector2(34348, 41813)
state = ExtResource("7_fevyo")
hub_menu_ui = NodePath("../UILayer/HubMenuUI")
market_ui = NodePath("../UILayer/MarketUI")
recruitment_ui = NodePath("../UILayer/RecruitmentUI")
debug_draw_grid = true

[node name="Stonegrove" parent="." node_paths=PackedStringArray("hub_menu_ui", "market_ui", "recruitment_ui") instance=ExtResource("6_vqjas")]
position = Vector2(33516, 31817)
state = ExtResource("8_vjxgl")
hub_menu_ui = NodePath("../UILayer/HubMenuUI")
market_ui = NodePath("../UILayer/MarketUI")
recruitment_ui = NodePath("../UILayer/RecruitmentUI")
debug_draw_grid = true

[node name="Beaconsrest" parent="." node_paths=PackedStringArray("hub_menu_ui", "market_ui", "recruitment_ui") instance=ExtResource("6_vqjas")]
position = Vector2(30506, 37000)
state = ExtResource("9_mu5r8")
hub_menu_ui = NodePath("../UILayer/HubMenuUI")
market_ui = NodePath("../UILayer/MarketUI")
recruitment_ui = NodePath("../UILayer/RecruitmentUI")
debug_draw_grid = true

[node name="Bluerock" parent="." node_paths=PackedStringArray("hub_menu_ui", "market_ui", "recruitment_ui") instance=ExtResource("6_vqjas")]
position = Vector2(38401, 54546)
state = ExtResource("10_nurs3")
hub_menu_ui = NodePath("../UILayer/HubMenuUI")
market_ui = NodePath("../UILayer/MarketUI")
recruitment_ui = NodePath("../UILayer/RecruitmentUI")
debug_draw_grid = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HubMenuUI" parent="UILayer" instance=ExtResource("11_2efcw")]

[node name="MarketUI" parent="UILayer" instance=ExtResource("12_16lld")]

[node name="RecruitmentUI" parent="UILayer" instance=ExtResource("13_0dr1u")]

[node name="BeastDen" parent="." instance=ExtResource("14_20j0v")]
position = Vector2(29713, 34518)
den_type = ExtResource("15_ym87l")
